--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,14 +64,26 @@ a {
 
 button.wallet-adapter-button-trigger {
   cursor: pointer;
-  color: rgb(var(--foreground-rgb)) !important;
-  border: 1px solid rgb(var(--tertiary-background-rgb)) !important;
+  color: rgb(255,255,255) !important;
+  border: 1px solid rgb(27,27,27) !important;
   border-radius: var(--border-radius) !important;
-  background-color: rgb(var(--secondary-background-rgb)) !important;
+  background-color: rgb(var(--secondary-background-rgb));
+  background-color: rgb(27,27,27,1);
+  background-image: url('https://olive-broad-giraffe-200.mypinata.cloud/ipfs/QmaETkVfYdYo8v1djEstHtA1GNzjsWZhYha5okYRMA8yxv');
+  background-size: cover;
+  background-position: center;
+}
+
+note{
+  background-color: rgb(var(--secondary-background-rgb));
+  border: 1px solid rgb(var(--tertiary-background-rgb)) !important;
+  color: rgb(var(--foreground-rgb)) !important;
 }
 
 button.wallet-adapter-button-trigger:hover {
-  background-color: rgb(var(--hover-background-rgb)) !important;
+  background-color: rgb(var(--hover-background-rgb));
+  filter: brightness(1.2);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 1);
 }
 
 
@@ -80,7 +92,6 @@ button.wallet-adapter-button-trigger:hover {
   padding: 1em;
   display: grid;
   gap: 16px;
-  justify-content: center;
   max-width: 1900px;
   margin: 0 auto;
 }
