--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,11 +87,12 @@ note{
   color: rgb(var(--foreground-rgb)) !important;
 }
 
-button.wallet-adapter-button-trigger:hover {
+{/*button.wallet-adapter-button-trigger:hover {
   background-color: rgb(var(--hover-background-rgb));
   filter: brightness(1.2);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 1);
 }
+*/}
 
 
 #nft-display {
