--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -135,3 +135,64 @@
   max-width: 1900px;
   margin: 0 auto;
 }
+
+.container {
+  position: relative; /* Assurez-vous que le conteneur a une position relative */
+}
+
+.blackScreen {
+  position: fixed; /* Utilisez fixed pour couvrir tout l'écran */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 1); /* Couleur noire avec transparence */
+  z-index: 2222; /* Un index de z élevé pour le placer au-dessus des autres éléments */
+  display: flex; /* Pour centrer le contenu si nécessaire */
+  justify-content: center; /* Centre horizontalement */
+  align-items: center; /* Centre verticalement */
+  opacity: 1; /* Commence avec une opacité de 1 */
+  transition: opacity 1s ease; /* Durée de la transition pour la disparition */
+}
+
+.redScreen {
+  position: fixed; /* Utilisez fixed pour couvrir tout l'écran */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0); /* Couleur noire avec transparence */
+  z-index: 3333; /* Un index de z élevé pour le placer au-dessus des autres éléments */
+  display: flex; /* Pour centrer le contenu si nécessaire */
+  justify-content: center; /* Centre horizontalement */
+  align-items: center; /* Centre verticalement */
+  opacity: 1; /* Commence avec une opacité de 1 */
+  transition: opacity 1s ease; /* Durée de la transition pour la disparition */
+}
+
+.fadeOut {
+  opacity: 0; /* Opacité à 0 pour la disparition */
+  transition: opacity 1s ease; /* Durée de la transition pour la disparition */
+}
+
+.fadeOut2 {
+  opacity: 0;
+  transition: opacity 2s ease;
+}
+
+.textContainer {
+  position: relative; /* Pour que le texte apparaisse au-dessus de l'écran noir */
+  z-index: 4444; /* S'assure que le texte soit au-dessus de l'écran noir */
+  text-align: center; /* Centrer le texte */
+  transition: opacity 1s ease; /* Durée de la transition pour la disparition */
+}
+
+.fadeIn {
+  opacity: 1;
+  transition: opacity 0.5s ease-in;
+}
+
+.hiddenImage {
+  opacity: 0;
+  transition: opacity 0.5s ease-in;
+}
